# PySee

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
deploy/env/: raspberry.env.example  server.env.example
deploy/systemd/: pysee-raspberry.service  pysee-server.service
src/pysee/: __init__.py
src/pysee/common/: __init__.py  config.py  webrtc.py
src/pysee/raspberry/: __init__.py  camera.py  main.py
src/pysee/server/: __init__.py  main.py  state.py
src/pysee/server/static/: app.js  index.html
