[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysee"
version = "0.1.0"
description = "Simple intranet surveillance skeleton for Raspberry Pi and a local server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9,<4",
  "aiortc>=1.9,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
